--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,15 +42,38 @@ dependencies:
   flutter_slidable: null
   image_picker: ^0.8.6
   flutter_barcode_scanner: ^2.0.0
-  provider: any
-  intl: ^0.17.0
   flutter_easyloading: ^3.0.5
   dropdown_button2: ^1.8.9
   autocomplete_textfield: ^2.0.1
   flutter_typeahead: ^4.1.1
   awesome_snackbar_content: ^0.1.0
   awesome_dialog: ^3.0.2
-  get: ^4.6.5
+  get: any
+  auto_size_text: 3.0.0
+  cached_network_image: 3.2.1
+  flutter_animate: 4.1.1+1
+  flutter_cache_manager: 3.3.0
+  font_awesome_flutter: 10.1.0
+  from_css_color: 2.0.0
+  go_router: 7.1.1
+  google_fonts: 4.0.3
+  intl: 0.18.0
+  json_path: 0.6.2
+  path_provider_android: 2.0.25
+  path_provider_foundation: 2.2.2
+  path_provider_platform_interface: 2.0.6
+  provider: 6.0.4
+  shared_preferences: 2.0.15
+  shared_preferences_android: 2.1.0
+  shared_preferences_ios: 2.1.1
+  shared_preferences_platform_interface: 2.2.0
+  shared_preferences_web: 2.1.0
+  sqflite: 2.2.6
+  timeago: 3.2.2
+  url_launcher: 6.1.10
+  url_launcher_android: 6.0.27
+  url_launcher_ios: 6.1.4
+  url_launcher_platform_interface: 2.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -80,11 +103,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - lib/assets/images/
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
