--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   firebase_core: ^2.19.0
   firebase_auth: ^4.11.1
   cloud_firestore: ^4.11.0
+  syncfusion_flutter_charts: ^23.1.42
 
 
   # The following adds the Cupertino Icons font to your application.
